fixing overflow style

--- a/src/components/filepicker.css
+++ b/src/components/filepicker.css
@@ -68,6 +68,7 @@
     display: block;
     font-size: small;
     overflow: hidden;
+    width: 8rem;
 
 }
 
